Modifying about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,8 @@
         {{!-- adding the partial hbs template --}}
         {{>header}}
 
+        <p>This site was created by Ayush Maheshwari. It uses data from mapbox.com and darksky.net!</p>
+
         <img src="/img/Thor.jpg" class="portrait">
     </div>
     {{>footer}}
